welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: type mismatch;
 found   : Unit
 required: Boolean
def estFaceBiscuit():Boolean = {var b =true;if (estFaceMur()) {b=false} else {avance();b = estSurBiscuit();recule();return b}}
                                                                ^